# Imbalanced-Data-Pipeline

./: .env.dev  .gitignore  README.md  pyproject.toml  requirements.txt
data/data_versions/: abalone_df_10.csv  abalone_df_100.csv  abalone_df_15.csv  abalone_df_20.csv  abalone_df_25.csv  abalone_df_30.csv  abalone_df_35.csv  abalone_df_40.csv  abalone_df_45.csv  abalone_df_5.csv  abalone_df_50.csv  abalone_df_55.csv  abalone_df_60.csv  abalone_df_65.csv  abalone_df_70.csv  abalone_df_75.csv  abalone_df_80.csv  abalone_df_85.csv  abalone_df_90.csv  abalone_df_95.csv
data/metrics/: KNN_metrics.csv  RF_metrics.csv  SVM_metrics.csv
data/processed/: cleaned_abalone.csv
data/raw/: unclean_abalone.csv
docs/: testing-best-practices.md
notebooks/: generate_imbalance.ipynb  transform_Abalone.ipynb
scripts/: run_etl.py
src/extract/: extract.py  extract_abalone.py  extract_customers.py  extract_query.py  extract_transactions.py
src/load/: load_abalone.py  write_data_to_csv.py
src/sql/: extract_transactions.sql
src/transform/: add_imbalance_tag.py  clean_abalone.py  clean_customers.py  clean_transactions.py  encode_abalone.py  merge_abalone_data_versions.py  resample_abalone.py  standardize_abalone.py  transform.py
src/utils/: sql_utils.py
streamlit_visualization/: create_datasets_stats.py  draw_metrics_bar_chart.py  draw_metrics_line_chart.py  read_abalone_csv_files.py  requirements.txt  streamlit_visualiz.py  train_knn_model.py  train_models.py  train_randforest_model.py  train_svm_model.py  train_xgboost_model.py
tests/: run_tests.py
tests/component_tests/: test_database_component.py  test_extract_customers_component.py  test_extract_data.py  test_extract_transactions_component.py  test_transform_customers_component.py  test_transform_data.py  test_transform_transactions_component.py
tests/e2e_tests/: test_etl_pipeline.py
tests/integration_tests/: conftest.py  test_extract_transform_integration.py
tests/test_data/: cleaned_abalone.csv  test.sql
(+4 files in other folders)
