[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imbalanced_data_pipeline"
version = "0.1.0"
description = "An ETL project for extracting, transforming, resampling, and loading versions of the Imbalanced data."
authors = [{name = "Noor Mohammad Atapoor", email = "atapoor88@gmail.com"}]
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/NMAtapoor/Imbalanced-Data-Pipeline"

[project.scripts]
run_etl = "scripts.run_etl:main"
run_tests = "tests.run_tests:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["imbalanced_data_pipeline*"]


[project]
dependencies = [
    "numpy==2.3.2",
    "pandas==2.3.1",
    "streamlit==1.48.1",
    # … include only essential packages for editable install
]

